[gd_scene load_steps=5 format=2]

[ext_resource path="res://Image/images_faculdade/atividade_MatFin.png" type="Texture" id=1]
[ext_resource path="res://Faculdade/Scripts/atividade_MatFin.gd" type="Script" id=2]
[ext_resource path="res://Image/images_faculdade/Confirma.png" type="Texture" id=3]
[ext_resource path="res://Image/images_faculdade/erro.png" type="Texture" id=4]

[node name="Node2D" type="Node2D"]
script = ExtResource( 2 )

[node name="ParallaxBackground" type="ParallaxBackground" parent="."]

[node name="ParallaxLayer" type="ParallaxLayer" parent="ParallaxBackground"]

[node name="TextureRect" type="TextureRect" parent="ParallaxBackground/ParallaxLayer"]
margin_right = 1024.0
margin_bottom = 600.0
texture = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="resposta1_p1" type="Button" parent="ParallaxBackground/ParallaxLayer"]
margin_left = 395.0
margin_top = 200.0
margin_right = 486.0
margin_bottom = 231.0
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="resposta2_p1" type="Button" parent="ParallaxBackground/ParallaxLayer"]
margin_left = 494.0
margin_top = 200.0
margin_right = 585.0
margin_bottom = 231.0
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="resposta1_p2" type="Button" parent="ParallaxBackground/ParallaxLayer"]
margin_left = 395.0
margin_top = 287.0
margin_right = 486.0
margin_bottom = 319.0
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="resposta2_p2" type="Button" parent="ParallaxBackground/ParallaxLayer"]
margin_left = 494.0
margin_top = 287.0
margin_right = 586.0
margin_bottom = 318.0
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="resposta1_p3" type="Button" parent="ParallaxBackground/ParallaxLayer"]
margin_left = 395.0
margin_top = 374.0
margin_right = 486.0
margin_bottom = 405.0
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="resposta2_p3" type="Button" parent="ParallaxBackground/ParallaxLayer"]
margin_left = 494.0
margin_top = 374.0
margin_right = 585.0
margin_bottom = 405.0
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="resposta1_p4" type="Button" parent="ParallaxBackground/ParallaxLayer"]
margin_left = 395.0
margin_top = 461.0
margin_right = 486.0
margin_bottom = 493.0
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="resposta2_p4" type="Button" parent="ParallaxBackground/ParallaxLayer"]
margin_left = 494.0
margin_top = 461.0
margin_right = 586.0
margin_bottom = 493.0
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="pergunta1" type="TextureRect" parent="ParallaxBackground/ParallaxLayer"]
visible = false
margin_left = 619.0
margin_top = 194.0
margin_right = 659.0
margin_bottom = 234.0
texture = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="pergunta2" type="TextureRect" parent="ParallaxBackground/ParallaxLayer"]
visible = false
margin_left = 619.0
margin_top = 282.0
margin_right = 659.0
margin_bottom = 322.0
texture = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="pergunta3" type="TextureRect" parent="ParallaxBackground/ParallaxLayer"]
visible = false
margin_left = 621.0
margin_top = 370.0
margin_right = 661.0
margin_bottom = 410.0
texture = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="pergunta4" type="TextureRect" parent="ParallaxBackground/ParallaxLayer"]
visible = false
margin_left = 621.0
margin_top = 457.0
margin_right = 661.0
margin_bottom = 497.0
texture = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="erro_p1" type="TextureRect" parent="ParallaxBackground/ParallaxLayer"]
visible = false
margin_left = 617.0
margin_top = 196.0
margin_right = 657.0
margin_bottom = 236.0
texture = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="erro_p2" type="TextureRect" parent="ParallaxBackground/ParallaxLayer"]
visible = false
margin_left = 619.0
margin_top = 283.0
margin_right = 659.0
margin_bottom = 323.0
texture = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="erro_p3" type="TextureRect" parent="ParallaxBackground/ParallaxLayer"]
visible = false
margin_left = 619.0
margin_top = 368.0
margin_right = 659.0
margin_bottom = 408.0
texture = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="erro_p4" type="TextureRect" parent="ParallaxBackground/ParallaxLayer"]
visible = false
margin_left = 619.0
margin_top = 457.0
margin_right = 659.0
margin_bottom = 497.0
texture = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="acertos" type="Label" parent="ParallaxBackground/ParallaxLayer"]
margin_left = 566.0
margin_top = 525.0
margin_right = 599.0
margin_bottom = 553.0
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="voltar" type="Button" parent="ParallaxBackground/ParallaxLayer"]
margin_left = 699.0
margin_top = 21.0
margin_right = 729.0
margin_bottom = 51.0
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="pressed" from="ParallaxBackground/ParallaxLayer/resposta1_p1" to="." method="_on_resposta1_p1_pressed"]
[connection signal="pressed" from="ParallaxBackground/ParallaxLayer/resposta2_p1" to="." method="_on_resposta2_p1_pressed"]
[connection signal="pressed" from="ParallaxBackground/ParallaxLayer/resposta1_p2" to="." method="_on_resposta1_p2_pressed"]
[connection signal="pressed" from="ParallaxBackground/ParallaxLayer/resposta2_p2" to="." method="_on_resposta2_p2_pressed"]
[connection signal="pressed" from="ParallaxBackground/ParallaxLayer/resposta1_p3" to="." method="_on_resposta1_p3_pressed"]
[connection signal="pressed" from="ParallaxBackground/ParallaxLayer/resposta2_p3" to="." method="_on_resposta2_p3_pressed"]
[connection signal="pressed" from="ParallaxBackground/ParallaxLayer/resposta1_p4" to="." method="_on_resposta1_p4_pressed"]
[connection signal="pressed" from="ParallaxBackground/ParallaxLayer/resposta2_p4" to="." method="_on_resposta2_p4_pressed"]
[connection signal="pressed" from="ParallaxBackground/ParallaxLayer/voltar" to="." method="_on_voltar_pressed"]
